# office_metadata_extractor

./: LICENSE  README.md  pyproject.toml  setup.py
office_metadata_extractor/: __init__.py  extractor.py
